<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">TipTip</string>
    <string name="tip_amount">Tip Amount</string>

    <string name="percentage_of_tip">Percentage of Tip</string>
    <string name="number_of_people">Number of People</string>
    <string name="bill">Amount of Bill</string>
    <string name="tip">Amount of Tip</string>
    <string name="total_amount">Total Amount</string>
    <string name="amount_per_person">Amount per Person</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="percent">%</string>
    <string name="calculate">Calculate</string>

    <string name="percent_format"><xliff:g id="percent">%.2f</xliff:g>%</string>
</resources>
