<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$TipCalcFragment"
    android:id="@+id/tip_calc">
    <!-- TODO: layout for landscape -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingLeft="16dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textview_bill"
                        android:layout_gravity="center_vertical|right"
                        android:text="@string/bill"
                        android:textSize="@dimen/abc_text_size_large_material"
                        android:fontFamily="sans-serif-condensed"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingLeft="16dp"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edittext_bill"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:inputType="numberDecimal"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="@dimen/abc_text_size_large_material"
                        />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingLeft="16dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percentage_of_tip"
                        android:id="@+id/textview_percentage_of_tip"
                        android:layout_gravity="center_vertical|right"
                        android:textSize="@dimen/abc_text_size_large_material"
                        android:fontFamily="sans-serif-condensed"/>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    >

                    <Button
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:text="@string/minus"
                        android:id="@+id/btn_minus"
                        android:textSize="18sp"
                        android:layout_gravity="top"
                        android:background="@android:color/transparent"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/edittext_percentage_of_tip"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="@dimen/abc_text_size_large_material"
                        android:inputType="numberDecimal"/>

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:text="@string/plus"
                        android:background="@android:color/transparent"
                        android:id="@+id/btn_plus"
                        android:textSize="18sp"
                        android:layout_gravity="top"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingLeft="16dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_people"
                        android:id="@+id/textview_number_of_people"
                        android:layout_gravity="center_vertical|right"
                        android:textSize="@dimen/abc_text_size_large_material"
                        android:fontFamily="sans-serif-condensed"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingLeft="16dp"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edittext_number_of_people"
                        android:layout_gravity="center"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="@dimen/abc_text_size_large_material"
                        />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_marginBottom="16dp">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calculate"
                        android:id="@+id/btn_calculate"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_gravity="center"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_people"
                        android:id="@+id/textview_tip"
                        android:layout_gravity="center_vertical|right"
                        android:textSize="@dimen/abc_text_size_large_material"
                        android:fontFamily="sans-serif-condensed"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textview_tip_value"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_gravity="right"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_amount"
                        android:id="@+id/textview_total_amount"
                        android:layout_gravity="center_vertical|right"
                        android:textSize="@dimen/abc_text_size_large_material"
                        android:fontFamily="sans-serif-condensed"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textview_total_amount_value"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_gravity="right"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_per_person"
                        android:id="@+id/textview_amount_per_person"
                        android:layout_gravity="center_vertical|right"
                        android:textSize="@dimen/abc_text_size_large_material"
                        android:fontFamily="sans-serif-condensed"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textview_amount_per_person_value"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_gravity="right"/>
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>